<resources>
    <string name="app_name">Happy Places</string>
    <string name="add_button">Add button</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="location">Location</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="save">SAVE</string>
    <string name="no_happy_found_yet_kindly_add_one">No Happy Place Found Yet. Kindly add one.</string>
    <string name="image">image</string>
    <string name="update">UPDATE</string>
</resources>